cambios en zip y json movimientos